--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: tblog
+title: Yon
 email: lzy110100@aliyun.com
 description: >- # this means to ignore newlines until "baseurl:"
   Jekyll blog deployment.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zi-l.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 theme: jekyll-theme-minimal
