--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Yon
 email: lzy110100@aliyun.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Jekyll blog deployment.
+  Lost in your eyes.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zi-l.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
