update description and title

--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Yon
+title: YON LIU
 email: lzy110100@aliyun.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Lost in your eyes.
+  LOST IN YOUR EYES.
+  你是辛波斯卡笔下无法抵挡的一见钟情
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zi-l.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
