--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: YON LIU
 email: lzy110100@aliyun.com
 description: >- # this means to ignore newlines until "baseurl:"
   LOST IN YOUR EYES.
-  你是辛波斯卡笔下无法抵挡的一见钟情
+  <br>你是辛波斯卡笔下无法抵挡的一见钟情
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zi-l.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
